--- a/Views/perguntar.ejs
+++ b/Views/perguntar.ejs
@@ -15,7 +15,29 @@
       </a>
     </nav>
     <br />
-    <h1>Bem vindo bootstrap</h1>
+    <div class="container">
+      <div class="card">
+        <div class="card-header">
+          <h3>Realizar Pergunta</h3>
+        </div>
+        <div class="card-body">
+          <form action="">
+            <label>Título</label>
+            <input type="text" placeholder="Título" class="form-control" />
+            <br />
+            <label>Descrição</label>
+            <textarea
+              name="form-pergunta"
+              id=""
+              placeholder="Descreva sua pergunta aqui"
+              class="form-control"
+            ></textarea>
+            <br />
+            <button class="btn btn-success">Perguntar</button>
+          </form>
+        </div>
+      </div>
+    </div>
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
