--- a/Views/perguntar.ejs
+++ b/Views/perguntar.ejs
@@ -1,53 +1,33 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Guia Perguntas</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/css/style.css" />
-  </head>
-  <body>
-    <nav class="navbar navbar-light bg-primary">
-      <a class="navbar-brand" href="/">
-        <h4 class="navbar">Guia de Perguntas</h4>
-      </a>
-    </nav>
-    <br />
-    <div class="container">
-      <div class="card">
-        <div class="card-header">
-          <h3>Realizar Pergunta</h3>
-        </div>
-        <div class="card-body">
-          <form action="">
-            <label>Título</label>
-            <input type="text" placeholder="Título" class="form-control" />
-            <br />
-            <label>Descrição</label>
-            <textarea
-              name="form-pergunta"
-              id=""
-              placeholder="Descreva sua pergunta aqui"
-              class="form-control"
-            ></textarea>
-            <br />
-            <button class="btn btn-success">Perguntar</button>
-          </form>
-        </div>
+<%- include('partials/header.ejs') %>
+<body>
+  <%- include('partials/navbar.ejs') %>
+  <div class="container">
+    <div class="card">
+      <div class="card-header">
+        <h3>Realizar Pergunta</h3>
+      </div>
+      <div class="card-body">
+        <form method="POST" action="/salvarpergunta">
+          <label>Título</label>
+          <input
+            type="text"
+            placeholder="Título"
+            class="form-control"
+            name="titulo"
+          />
+          <br />
+          <label>Descrição</label>
+          <textarea
+            name="descricao"
+            id=""
+            placeholder="Descreva sua pergunta aqui"
+            class="form-control"
+          ></textarea>
+          <br />
+          <button class="btn btn-primary">Perguntar</button>
+        </form>
       </div>
     </div>
-  </body>
-  <script
-    src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
-    integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
-    crossorigin="anonymous"
-  ></script>
-  <script src="/js/bootstrap.min.js"></script>
-</html>
+  </div>
+</body>
+<%- include('partials/footer.ejs') %>
