--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -4,7 +4,7 @@
 
   <div class="container">
     <hr />
-    <h1>Perguntas</h1>
+    <h1>Faça uma pergunta</h1>
     <hr />
     <a href="/perguntar" class="btn btn-primary">Perguntar</a>
     <hr />
