--- a/Views/pergunta.ejs
+++ b/Views/pergunta.ejs
@@ -4,7 +4,10 @@
 
   <div class="container">
     <hr />
-    <h1><%=pergunta.titulo %></h1>
+    <div id="button-title" class="col-lg-12">
+      <a href="/" class="btn btn-primary">Voltar</a>
+    </div>
+    <h1 id="voltar"><%=pergunta.titulo %></h1>
     <p><%=pergunta.descricao %></p>
     <hr />
     <form method="POST" action="/responder">
